Disable next button and enable only when condition is meet

--- a/Assignment 3/Task 2/app/src/main/res/layout/fragment_menu.xml
+++ b/Assignment 3/Task 2/app/src/main/res/layout/fragment_menu.xml
@@ -351,6 +351,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/green"
+                android:enabled="false"
                 android:text="Next"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
