--- a/ShopNow/app/src/main/res/layout/fragment_all_product.xml
+++ b/ShopNow/app/src/main/res/layout/fragment_all_product.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F2F2F2"
     tools:context=".fragment.AllProductFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/all_product_list"
+        android:layout_marginBottom="260dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="All Product" />
-
+        android:layout_height="wrap_content" />
 </FrameLayout>
