--- a/ShopNow/app/src/main/res/menu/bottom_navigation_item.xml
+++ b/ShopNow/app/src/main/res/menu/bottom_navigation_item.xml
@@ -5,7 +5,7 @@
         android:icon="@drawable/baseline_home_24" />
 
     <item android:id="@+id/bottom_navigation_cart"
-        android:title="In Progress"
+        android:title="Cart"
         android:icon="@drawable/baseline_shopping_cart_24" />
 
     <item android:id="@+id/bottom_navigation_account"
