--- a/Assignment6/app/src/main/res/layout/fragment_view_map.xml
+++ b/Assignment6/app/src/main/res/layout/fragment_view_map.xml
@@ -43,12 +43,11 @@
 
             <TextView
                 android:id="@+id/location_text"
-                android:layout_width="wrap_content"
+                android:layout_width="230dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginBottom="24dp"
+                android:layout_marginTop="8dp"
                 android:text="location..."
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
 
