--- a/ShopNow/app/src/main/res/layout/fragment_all.xml
+++ b/ShopNow/app/src/main/res/layout/fragment_all.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F2F2F2"
-    tools:context=".fragment.AllProductFragment">
+    tools:context=".fragment.AllFragment">
 
+    <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/all_product_list"
+        android:id="@+id/all_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp" />
+        android:layout_height="match_parent" />
+
 </FrameLayout>
