--- a/ShopNow/app/src/main/res/layout/fragment_daily.xml
+++ b/ShopNow/app/src/main/res/layout/fragment_daily.xml
@@ -5,8 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".fragment.DailyFragment">
 
+    <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/daily_product_list"
+        android:id="@+id/daily_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 </FrameLayout>
