--- a/ShopNowSeller/app/src/main/res/layout/activity_edit.xml
+++ b/ShopNowSeller/app/src/main/res/layout/activity_edit.xml
@@ -144,4 +144,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
+    <Button
+        android:id="@+id/edit_delete_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="@android:color/holo_red_light"
+        android:text="Delete"
+        app:layout_constraintBottom_toBottomOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView5" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
