--- a/ShopNow/app/src/main/res/layout/activity_product_detail.xml
+++ b/ShopNow/app/src/main/res/layout/activity_product_detail.xml
@@ -18,6 +18,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:id="@+id/detail_cart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/materialToolbar"
+        app:srcCompat="@drawable/baseline_shopping_cart_24" />
+
+    <ImageView
         android:id="@+id/detail_product_image"
         android:layout_width="match_parent"
         android:layout_height="380dp"
@@ -71,6 +81,16 @@
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detail_product_name" />
+
+    <TextView
+        android:id="@+id/detail_product_quantity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="@+id/detail_product_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/detail_product_name" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
