--- a/ShopNow/app/src/main/res/layout/cart_item.xml
+++ b/ShopNow/app/src/main/res/layout/cart_item.xml
@@ -77,10 +77,10 @@
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/cardView3"
-        app:layout_constraintEnd_toStartOf="@+id/cart_add_count" />
+        app:layout_constraintEnd_toStartOf="@+id/bottom_sheet_add_count" />
 
     <ImageView
-        android:id="@+id/cart_add_count"
+        android:id="@+id/bottom_sheet_add_count"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginEnd="16dp"
