--- a/ShopNow/app/src/main/res/layout/fragment_account.xml
+++ b/ShopNow/app/src/main/res/layout/fragment_account.xml
@@ -24,11 +24,11 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:text="example@gmail.com"
-                app:layout_constraintStart_toEndOf="@+id/shapeableImageView"
+                app:layout_constraintStart_toEndOf="@+id/account_image"
                 app:layout_constraintTop_toBottomOf="@+id/username_text" />
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/shapeableImageView"
+                android:id="@+id/account_image"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginStart="16dp"
@@ -50,7 +50,7 @@
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/shapeableImageView"
+                app:layout_constraintStart_toEndOf="@+id/account_image"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
@@ -62,6 +62,16 @@
                 app:layout_constraintBottom_toBottomOf="@+id/username_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/username_text" />
+
+            <ImageView
+                android:id="@+id/acount_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:src="@drawable/baseline_edit_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/logout_image" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -92,7 +102,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView6">
 
                 <LinearLayout
-                    android:id="@+id/cart"
+                    android:id="@+id/to_ship"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginStart="24dp"
@@ -100,32 +110,6 @@
                     android:gravity="center"
                     android:orientation="vertical"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <ImageView
-                        android:id="@+id/imageView5"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:layout_weight="1"
-                        android:src="@drawable/baseline_shopping_cart_24" />
-
-                    <TextView
-                        android:id="@+id/textView7"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Cart" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/to_ship"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="48dp"
-                    android:layout_weight="0"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    app:layout_constraintStart_toEndOf="@+id/cart"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <ImageView
