--- a/ShopNow/app/src/main/res/layout/fragment_all_product.xml
+++ b/ShopNow/app/src/main/res/layout/fragment_all_product.xml
@@ -3,12 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.AllFragment">
+    tools:context=".fragment.AllProductFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/all_list"
+        android:id="@+id/all_product_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
 </FrameLayout>
