--- a/ShopNow/app/src/main/res/layout/fragment_home.xml
+++ b/ShopNow/app/src/main/res/layout/fragment_home.xml
@@ -41,6 +41,15 @@
                 app:layout_constraintTop_toBottomOf="@+id/shop_title"
                 tools:src="@tools:sample/avatars" />
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/home_product_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/home_page_banner" />
+
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tab_layout"
                 android:layout_width="wrap_content"
@@ -79,7 +88,7 @@
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewPager2"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
