--- a/ShopNow/app/src/main/res/layout/activity_purchase.xml
+++ b/ShopNow/app/src/main/res/layout/activity_purchase.xml
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:text="TextView"
+                android:text="Home"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
@@ -64,7 +64,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <TextView
-        android:id="@+id/textView23"
+        android:id="@+id/purchase_shop_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -81,8 +81,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         app:cardCornerRadius="8dp"
-        app:layout_constraintStart_toStartOf="@+id/textView23"
-        app:layout_constraintTop_toBottomOf="@+id/textView23">
+        app:layout_constraintStart_toStartOf="@+id/purchase_shop_name"
+        app:layout_constraintTop_toBottomOf="@+id/purchase_shop_name">
 
         <ImageView
             android:id="@+id/purchase_product_image"
