--- a/ShopNow/app/src/main/res/layout/fragment_home.xml
+++ b/ShopNow/app/src/main/res/layout/fragment_home.xml
@@ -16,6 +16,32 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/search_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                app:cardCornerRadius="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/shop_title"
+                app:strokeColor="#5A5A5A"
+                app:strokeWidth="1dp">
+
+                <TextView
+                    android:id="@+id/textView18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
+                    android:text="Search"
+                    android:textSize="16sp"
+                    tools:text="Search" />
+            </com.google.android.material.card.MaterialCardView>
+
             <TextView
                 android:id="@+id/shop_title"
                 android:layout_width="wrap_content"
@@ -33,12 +59,12 @@
                 android:id="@+id/home_page_banner"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintDimensionRatio="16:9"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/shop_title"
+                app:layout_constraintTop_toBottomOf="@+id/search_input"
                 tools:src="@tools:sample/avatars" />
 
             <androidx.recyclerview.widget.RecyclerView
