--- a/ShopNow/app/src/main/res/layout/purchased_item.xml
+++ b/ShopNow/app/src/main/res/layout/purchased_item.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/purchase_product_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -10,7 +11,6 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -54,12 +54,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
         android:text="TextView"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/purchased_quantity" />
 
@@ -71,4 +69,17 @@
         app:layout_constraintBottom_toBottomOf="@+id/purchased_total"
         app:layout_constraintEnd_toStartOf="@+id/purchased_total"
         app:layout_constraintTop_toTopOf="@+id/purchased_total" />
+
+    <Button
+        android:id="@+id/purchase_item_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/purchased_total" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
