--- a/ShopNowSeller/app/src/main/res/layout/activity_order_detail.xml
+++ b/ShopNowSeller/app/src/main/res/layout/activity_order_detail.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="name"
+        android:text="Name"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="total"
+        android:text="Total"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/order_detail_product_name"
         app:layout_constraintTop_toBottomOf="@+id/order_detail_product_name" />
@@ -87,5 +87,31 @@
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/order_detail_buyer_name"
         app:layout_constraintTop_toBottomOf="@+id/order_detail_buyer_name" />
+
+    <Button
+        android:id="@+id/order_detail_action_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        android:text="Shipped"
+        app:layout_constraintBottom_toTopOf="@+id/order_detail_cancel_order_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/order_detail_cancel_order_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/button_border"
+        android:text="Cancel order"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
