--- a/ShopNowSeller/app/src/main/res/layout/fragment_product_out_of_stock.xml
+++ b/ShopNowSeller/app/src/main/res/layout/fragment_product_out_of_stock.xml
@@ -3,11 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.AllFragment">
+    tools:context=".fragment.ProductOutOfStockFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/all_product_list"
+        android:id="@+id/out_of_stock_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp" />
+        android:layout_height="match_parent" />
 </FrameLayout>
