--- a/ShopNowSeller/app/src/main/res/menu/bottom_navigation_item.xml
+++ b/ShopNowSeller/app/src/main/res/menu/bottom_navigation_item.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/bottom_navigation_all"
-        android:title="All"
+        android:title="Products"
+        android:icon="@drawable/baseline_grid_view_24" />
+
+    <item android:id="@+id/bottom_navigation_shop"
+        android:title="Shop"
         android:icon="@drawable/baseline_home_24" />
 
-    <item android:id="@+id/bottom_navigation_add"
-        android:title="Add"
-        android:icon="@drawable/baseline_add_24" />
-
-    <item android:id="@+id/bottom_navigation_unactive"
-        android:title="Unactive"
-        android:icon="@drawable/baseline_folder_off_24" />
+    <item android:id="@+id/bottom_navigation_order"
+        android:title="Order"
+        android:icon="@drawable/baseline_pending_actions_24" />
 </menu>
